--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -37,6 +37,7 @@
 				<button id="btnFileSelect" class="btn btn-primary">Select Metadata File</button>
 			</div>
 			<div class="col right-align">
+				<input id="txtOutputDir" type="text" class="txt" value="output" />
 				<input id="chkCreateCopies" type="checkbox" checked data-toggle="toggle" data-on="Create Copies" data-off="Rename Originals" data-onstyle="success" data-offstyle="danger" data-width="180" data-height="39">
 				<button id="btnRename" class="btn btn-primary">Start Processing</button>
 			</div>
