--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -43,6 +43,26 @@
 		</div>
 	</div>
 
+	<div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Processing Complete</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<h6>Your files have been renamed</h6>
+					<p>Please check your metadata directory for your renamed files.</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+				</div>
+				</div>
+			</div>
+		</div>
+
 
 
 	<div class="container">
