Updated build dependancies for creating distro

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -10,12 +10,12 @@
 	<link rel="stylesheet" href="../../node_modules/bootstrap4-toggle/css/bootstrap4-toggle.min.css">
 
 	<script>window.$ = window.jQuery = require('jquery');</script>
-	<script src="../../node_modules/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+	<script>require("../../node_modules/jquery-nice-select")</script>
+	<script>require("../../node_modules/popper")</script>
+	<script>require("../../node_modules/bootstrap")</script>
+	<script>require("../../node_modules/bootstrap4-toggle")</script>
 
-	<script src="../../node_modules/popper.js/dist/umd/popper.js"></script>
-
-	<script src="../../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-	<script src="../../node_modules/bootstrap4-toggle/js/bootstrap4-toggle.min.js"></script>
+	
 
 	<script>require("./index")</script>
 </head>
