Can now use external renamers.json file

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -11,7 +11,7 @@
 
 	<script>window.$ = window.jQuery = require('jquery');</script>
 	<script>require("../../node_modules/jquery-nice-select")</script>
-	<script>require("../../node_modules/popper")</script>
+	<script>require("../../node_modules/popper.js")</script>
 	<script>require("../../node_modules/bootstrap")</script>
 	<script>require("../../node_modules/bootstrap4-toggle")</script>
 
