FIXED: Trim trailing empty columns and rows. #11
Rows are now checked if empty when loading data and only processed if they do contain data.

Additionally added check for duplicate column names

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -216,6 +216,11 @@
 					<h4>There are problems with the headings in your metadata</h4>
 					<hr/>
 					<p><strong>Please note that header names are case sensative.</strong><p></p>
+					<div id="errorsDuplicateColumnHeading">
+						<p>Your selected metadata includes duplicate column names/headings.</p>
+						<p><strong>Please remove/rename/replace all duplicate column headings as no two columns can have the same heading:</strong></p>
+						<ul id="errorsDuplicateColumn"></ul>
+					</div>
 					<div id="errorsMissingFilenameColumnHeading">
 						<p>Your selected Project requires a heading that specifies your filenames in your metadata, but it appears to be missing.</p>
 						<p><strong>Please check your metadata contains the following header that specifies your filenames:</strong></p>
