--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -181,7 +181,7 @@
 						If you've made changes to your metadata to fix any errors, or even if you're just added new data since you last loaded it, click below to refresh and check all your files.
 					</p>
 					<p>
-						<button id="btnRefershMetadata" class="btn btn-secondary btn-block">Refresh</button>
+						<button id="btnRefershMetadata" class="btn btn-info btn-block">Refresh</button>
 					</p>	
 				</div>
 				<div class="col">
@@ -191,7 +191,7 @@
 							<p>If you're happy with your data beind renamed as outline in the Results panel below, click Start Processing to beging renaming your files.</p>
 							
 							<!--<input id="chkCreateCopies" type="checkbox" checked data-toggle="toggle" data-on="Create Copies" data-off="Rename Originals" data-onstyle="success" data-offstyle="danger" data-width="180" data-height="39">-->
-							<button id="btnRename" class="btn btn-primary btn-block" disabled>Start Processing</button>
+							<button id="btnRename" class="btn btn-success btn-block" disabled>Start Processing</button>
 						</div>
 					</div>
 					<div class="row">
@@ -199,7 +199,7 @@
 							<br />
 							<h5>Output Directory</h5>
 							<p>By default you files will be copied to a folder called 'output' that will be created in the same directory as your metadata file. To change this, click the button below to select a new directory.</p>
-							<button id="btnSelectOutputDir" class="btn btn-secondary btn-block">Change Output Directory</button>
+							<button id="btnSelectOutputDir" class="btn btn-info btn-block">Change Output Directory</button>
 							<input id="txtOutputDir" type="text" class="form-control" disabled/><br />
 						</div>
 					</div>
