--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -337,17 +337,18 @@
 				<div class="col">
 					<h4>Renamer Properties</h4>
 					<hr/>
-					<p><strong>Current Filename Column:</strong> <span id="renamerFilenameCurrentColumnName"></span></p>
-					<p><strong>Old Filename Column:</strong> <span id="renamerFilenameOldColumnName"></span></p>
-					<p><strong>New Filename Column:</strong> <span id="renamerFilenameNewColumnName"></span></p>
-					<p><strong>Value Seperator:</strong> <span id="renamerValueSeperator"></span></p>
-					<p><strong>Property Seperator:</strong> <span id="renamerPropertySeperator"></span></p>
+					<p><strong>Current Filename Column:</strong> <span id="renamerMetadataCurrentFilenameColumn"></span></p>
+					<p><strong>Old Filename Column:</strong> <span id="renamerMetadataOldFilenameColumn"></span></p>
+					<p><strong>New Filename Column:</strong> <span id="renamerMetadataNewFilenameColumn"></span></p>
+
 					<p><strong>Trim Headers &amp; Data:</strong> <span id="renamerTrimHeadersAndData"></span></p>
 					<p><strong>Missing Data Tag:</strong> <span id="renamerMissingDataTag"></span></p>
 				</div>
 				<div class="col">
 					<h4>New Filename Data</h4>
 					<hr/>
+					<p><strong>Property Seperator:</strong> <span id="renamerFilenamePropertySeperator"></span></p>
+					<p><strong>Value Seperator:</strong> <span id="renamerFilenameValueSeperator"></span></p>
 					<span id="renamerColumns"></span>
 				</div>
 			</div>
