Fixed typos and added link to results panel

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -109,11 +109,11 @@
 						This application has been developed to help you automaticlaly rename files for your project based on your metadata.
 					</p>
 					<p>
-						With this application you can automatically rename hunderds of files at from: <br />
+						With this application you can automatically rename hunderds of files from: <br />
 						<strong>DCS_0002.jpg</strong> to <strong>20201231-Exp1-Rep2-UVLIGHT.jpg</strong>
 					</p>
 					<p>
-						Not only will this make your files more meaningful to you, but it will also allow your data to be better understood by people you collaborate with as well as any future researchers that want to work with your data.
+						Not only will this make your files more meaningful to you, but it will also allow your data to be better understood by people that you collaborate with as well as any future researchers that want to work with your data.
 					</p>
 				</div>
 				<div class="col-4">
@@ -139,7 +139,7 @@
 						To start renaming your files, first we need to know what your metadata is going to look like and how you'd like to rename your files.
 					</p>
 					<p>
-						Select the project you're working on from the drop down menu.
+						Select the project you're working on from the drop down menu on the right.
 					</p>
 				</div>
 				<div class="col">
@@ -188,7 +188,7 @@
 					<div class="row">
 						<div class="col">
 							<h2>3. Rename your Files</h2>
-							<p>If you're happy with your data beind renamed as outline in the Results panel below, click Start Processing to beging renaming your files.</p>
+							<p>If you're happy with your data being renamed as outline in the <a id="linkScrollToResults" href="#">Results panel</a> below, click "Start Processing" to begin renaming your files.</p>
 							
 							<!--<input id="chkCreateCopies" type="checkbox" checked data-toggle="toggle" data-on="Create Copies" data-off="Rename Originals" data-onstyle="success" data-offstyle="danger" data-width="180" data-height="39">-->
 							<button id="btnRename" class="btn btn-success btn-block" disabled>Start Processing</button>
